fixed text -overflow

--- a/small-projects/09MyBlog/src/index.css
+++ b/small-projects/09MyBlog/src/index.css
@@ -26,4 +26,5 @@
     border-radius: 4px;
     padding: 4px 8px;
     background-color: rgb(56, 58, 71);
+    white-space: pre-line;
 }
